--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "moment": "^2.24.0",
+    "node-sass": "^4.14.1",
     "pm2": "^3.5.1",
     "query-string": "^6.5.0",
     "react": "^16.8.6",
